@@ -5,6 +5,7 @@ Application Fixes:
 - Fixed an issue where some sourcebooks would insert ligature characters into an item's notes that Chummer could not handle and would prevent the character from being saved and/or crash whenever the character was opened.
 - When loading a character from a save file, the program now automatically checks if there are any saves in the autosave folder that seem to match the currently loading save file's character and that have a later last write date and time than those of the currently loading save file. If it finds such an autosave, it now prompts the user of whether they want to load the autosave instead, though if they do, the old save file will not be altered until they manually save, just in case they realize that the autosave is not what they want after it has been loaded.
 - Characters with all but one skill disabled in a skill group no longer have their only enabled skill's rating show up as their rating for that skill group.
+- Characters can now properly learn free spells in Career mode even if they do not have enough spare Karma to be able to learn said spells traditionally.
 
 Data Changes:
 - The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
